--- a/mindcanyon.html
+++ b/mindcanyon.html
@@ -19,7 +19,7 @@
             <div class="headline2">Latest Episode</div>
             <div class="bubble">
                 <div class="leImage">
-                    <img class="iconImage" src="images/apocalypse.jpg">
+                    <img class="iconImage" src="src/assets/apocalypse.jpg">
                 </div>
 
                 <div class="leText">
@@ -44,7 +44,7 @@
             <div class="headline2">About</div>
             <div class="bubble">
                 <div class="about">
-                    <img class="aboutImage" src="images/charlieandsteve.jpg">
+                    <img class="aboutImage" src="src/assets/charlieandsteve.jpg">
                     <div class="aboutText">
                         Mind Canyon is a mockumentary podcast starring the best UK improvisers. Nominated for Best
                         Comedy
